# agent-tracer

./: .env  .gitignore  CLAUDE.md  Makefile  README.md
bpf/: .gitignore  process.c  sslsniff.c  sslsniff.h
collector/: .gitignore  Cargo.toml  DESIGN.md  HTTP_FILTER.md  README.md
collector/src/: binary_extractor.rs  main.rs  process.rs  sslsniff.rs
collector/src/framework/: analyzer.rs  binary_extractor.rs  mod.rs  runner.rs  storage.rs  stream.rs  types.rs
collector/src/framework/analyzers/: LOG_ROTATION_DESIGN.md  auth_header_remover.rs  chunk_merger.rs  common.rs  event.rs  file_logger.rs  http.rs  http_filter.rs  http_parser.rs  mod.rs  output.rs  raw.rs  sse_processor.rs  sse_processor_tests.rs  ssl_filter.rs
collector/src/framework/analyzers/http/: analyzer.rs  mod.rs  parser.rs  types.rs
collector/src/framework/core/: error.rs  events.rs  mod.rs  streaming.rs
collector/src/framework/runners/: agent.rs  common.rs  fake.rs  mod.rs  process.rs  ssl.rs
collector/src/server/: assets.rs  mod.rs  test_assets.rs  test_integration.rs  test_web.rs  web.rs
docs/: FRONTEND_EMBEDDING.md  blog.md  blog_backup.md  opentelemetry_setup.md  paper.md  research_gap_analysis.md  usage.md  why.md
frontend/: README.md  next.config.js  package-lock.json  package.json
script/: Dockerfile.arm  README.md  analyze_ssl_logs.py  claude_analyzer.py  filter_expression.py  llm_semantic_analyzer.py  multi_signal_correlator.py  opentelemetry_example.py  run_ssl_analysis.sh  simple_ssl_analyzer.py  span_analyzer.py  ssl_data_timeline.py  ssl_header_metrics_analyzer.py  (+5 more)
(+100 files in other folders)
