[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
uuid = { version = "1.17.0", features = ["v4"] }
